Fix bullets clipping issues
DONM-192 #time 11m #review

--- a/_source/stylesheets/layout/_lists.scss
+++ b/_source/stylesheets/layout/_lists.scss
@@ -31,6 +31,8 @@ article li {
 		position: absolute;
 		left: -1em;
 
+		z-index: layer('default'); // required to prevent Blink clipping issues on columns
+
 		font-weight: bold;
 
 		color: palette('orange', 'light');
